# MSYS2-libconfig

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README  README.md  VERSION  bak.CMakeLists.txt  config.h  vcpkg-configuration.json  vcpkg.json
build-aux/: configure.sh.in
include/: config.h  defines.h  pacman-config.h  pacman-defines.h  pkgman_config.h
include/msystem/: msystem.h
include/pkgman/: ini.h  pkgman_config.h  util-common.h
include/runtime/: main.h
share/: LibConfigConfig.cmake.in  pkgman_config_config.cmake.in
src/: pacman-config.c  pkgman_config.c
src/msystem/: msystem.c
src/pkgman/: ini.c  pkgman_config.c  util-common.c
src/runtime/: main.c
